# OpenCoconut

./: .gitignore  README.md  pyproject.toml  research_journal.md  setup.py
examples/: eval.py  infer.py  main.ipynb  train.py
opencoconut/: __init__.py  dataset.py  evaluate.py
opencoconut/models/: __init__.py  _auto.py  _config.py  qwen2.py
scripts/: parse_synth_gsm8k.py
