[project]
name = "opencoconut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "setuptools>=75.8.0",
    "transformers[torch]>=4.48.0",
]


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.0.2",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
